--- a/style.css
+++ b/style.css
@@ -9,7 +9,7 @@ Forziamo tutti i nostri contenitori ad essere allineati e contenuti all'interno 
 in qeusto modo anche se c'è il padding, posso affiancare gli elementi
 DA METTERE SEMPRE IN TESTA
 */
-html, body{
+html, body{/*html dice al browser che da dove inizia il suo tag deve stampare tutto*/
   margin: 0px;
     /*Elimino i bordi del body! Molto importante.*/
   height: 100vh; /*Prende tutta l'altezza del mondo*/
@@ -17,6 +17,13 @@ html, body{
   Quindi se c'è ereditarietà, è una percentuale relativa (ovviamente html e body sono i padri di tutti). Quindi devo sempre specificare una funzione*/
 
 }
+
+body{
+  padding-top: 90px;
+}
+/*Avendo dato una fixed alla navbar e header, bisogna dare un padding
+della loro altezza al body*/
+
 .bg{
 
   background: #c6f09d;
@@ -70,10 +77,19 @@ header {
   width: 100%;
   height: 50px;
   margin-bottom: 0;
+  position: fixed;
+  top: 0;
+  left: 0;
+  right: 0;
+  z-index: 100;
 }
+/*
+Se lo mettiamo fixed
+*/
 
 header .logo /*logo appartiene a bg*/ {
   float: left;
+
 }
 
 header .login{ /*è familiartà non ereditarietà*/
@@ -86,7 +102,7 @@ header .text-color {
 }
 
 .text-color {
-  color: bluep;
+  color: blue;
 }
 
 nav{
@@ -94,6 +110,12 @@ nav{
   height: 40px;
   padding-top: 9px;
   padding-left: 20px;
+  position: fixed;
+  top: 50; /*altezza header*/
+  left:0;
+  right: 0;
+  z-index: 100;/*Ovviamente anche lei 100*/
+
 }
 nav ul{
   /*Stilizziamo la ul di nav*/
@@ -113,6 +135,14 @@ nav ul li{
   margin-right: 10px;
 }
 
+section h1{
+  color: white;
+}
+
+section p{
+  color: white;
+}
+
 section{
   float: left;
   height: 100%;
@@ -126,4 +156,30 @@ aside{
   background: #6b7be4;
   width: 200px;
   width: 40%;
+}
+
+footer{ /*grazie ai tag semantici non dobbiamo inventarci nomi strani*/
+  background-color: rgb(66, 94, 133);
+  color: white;
+  padding: 10px;
+  text-align: center;
+  height: 100px;
+}
+
+/*L'altezza è statica, ma ci interessa di più una scalabilità per i
+contenuti*/
+
+/*
+section.classe{} //la classe di section
+section .classe{} //i figli di section faranno così
+
+*/
+
+.square-section{
+  width: 100px;
+  height: 100px;
+  background-color: white;
+  position: fixed;
+  top: 50px;
+  right: 50px;
 }
