--- a/Prove/css/style.css
+++ b/Prove/css/style.css
@@ -1,7 +1,124 @@
-*{box-sizing: border-box;} /*Resta nella finestra data a disposizione*/
+*{box-sizing: border-box;
+  font-size: 14px;} /*Resta nella finestra data a disposizione*/
 
-html,body{
-  margin: : 0px;
+html, body{
+  margin: : 0;
   height: 100vh;
-  background-color: #e1e6e9;  
+
+}
+
+body{
+  padding-top: 90px;
+}
+
+ h2, h3{
+	margin-top: 0;
+}
+
+h1{
+  margin-top: 0;
+  font-size: 3em;
+}
+
+header{
+  background-color: #4C4C59 ;
+  color: white;
+  padding: 20px;
+  width: 100%;
+  height: 50px;
+  position: fixed;
+  top: 0;
+	left: 0;
+	right: 0;
+	z-index: 100;
+}
+
+header .logo{
+	float: left;
+}
+
+header .login{
+	float: right;
+}
+
+nav{
+  color: white;
+  padding-top: 9px;
+  padding-left: 20px;
+  height: 40px;
+  position: fixed;
+	top: 50px;
+	left:0;
+	right:0;
+	z-index: 100;
+}
+
+nav ul{
+	list-style: none;
+	margin: 0;
+	padding: 0;
+
+}
+
+nav ul li{
+	float: left;
+	margin-right: 10px;
+
+}
+
+nav ul a{
+	text-decoration: none;
+  color: green;
+
+}
+
+.container{
+  clear: both;
+  background-color: black;
+  width: 100%;
+
+
+}
+
+aside{
+  color: white;
+  width: 20%;
+
+}
+
+aside ul{
+  color: white;
+}
+
+aside li{
+  color: white;
+}
+
+section {
+  position: relative;
+  float: none;
+  color: white;
+  width: 100%;
+  background: #2d3032;
+  height: 100%;
+  clear: both;
+
+}
+
+aside {
+	float: none;
+	height: 100%;
+	background: brown;
+	width: 100%;
+}
+
+footer{
+  color: white;
+  background-color: black;
+  padding: 10px;
+  width: 100%;
+  height: 100px;
+
+
+
 }
