--- a/Prove/css/styles.css
+++ b/Prove/css/styles.css
@@ -91,9 +91,14 @@ section h1{
   margin-top: 0;
 }
 
+h2{
+  margin-top: 0;
+}
+
 aside{
   float: none;
   height: 100%;
+  background: brown;
   width: 100%;
 }
 
@@ -109,4 +114,48 @@ footer{
 
 footer p{
   text-align: center;
+}
+
+.img-container{
+  float: left;
+  padding-right: 10px;
+  padding-bottom: 10px;
+  width: 100%;
+}
+
+.img-background{
+  background-image: url(http://www.planwallpaper.com/static/images/beautiful-nature-background-wallpaper.jpg);
+  background-repeat: no-repeat;
+  background-size: cover;
+  background-attachment: fixed;
+  width: 100%;
+  height: 60%;
+}
+
+h1{
+  font-size: 3em;
+}
+
+@@media screen and (min-width: 1024) {
+  *{
+    font-size: 18px;
+  }
+
+  aside{
+    float: right;
+    width: 40%;
+    position: absolute;
+    right: 0;
+    top: 0;
+    bottom: 0;
+  }
+
+  section{
+    float: left;
+    width: 60%;
+  }
+
+  h1{
+    font-size: 1.3em
+  }
 }
