--- a/responsive/style.css
+++ b/responsive/style.css
@@ -198,6 +198,7 @@ footer p{
 h1{
 	/*font-size: 1em; Corrisponde a 18px*/
 	font-size: 3em /*fa riferimento ai 14px*/
+}
 
 /*Tutto ciò che va è sopra è per il mobile*/
 /*RESPONSIVE*/
@@ -231,11 +232,9 @@ h1{
 /*Nel mobile si danno degli intervalli, degli scalini, non degli intervalli*/
 /*Si ragiona mobile first*/
 /*nel mondo responsive, dimenticatevi di ragionare a pixel,
-tranne che nel breakpoint che è la dimensione dello schermo. Che ovviamente è
-a pixel.
+tranne che nel breakpoint che è la dimensione dello schermo. Che ovviamente è a pixel.
 Quando si lavora dentro al sito invece si lavora a percentuali.
-Allora anche per i font sarebbe bene ragionare in valori relativi, come
-l'unità di misura em */
+Allora anche per i font sarebbe bene ragionare in valori relativi, come l'unità di misura em */
 
 /*Unità em*/
 /*La dimensione base in pixel di un font è 16px che corrispondono a 100%
