--- a/20170617EserPerCompito/style.css
+++ b/20170617EserPerCompito/style.css
@@ -4,7 +4,9 @@
 html, body {
   width: 100%;
   height: 100%;
-  background-color: #f0f0f0; }
+  background-color: #f0f0f0;
+  display: flex;
+  justify-content: center; }
 
 h1 {
   text-align: center;
@@ -12,33 +14,45 @@ h1 {
 
 .form-container {
   width: 40%;
-  margin: 0 auto; }
-  .form-container form input {
-    width: 100%;
-    font-family: "Roboto", sans-serif;
-    border: none;
-    border-bottom: 1px solid purple;
-    background: none;
-    margin-bottom: 2px; }
-    .form-container form inputplaceholder {
-      font-color: blue; }
-  .form-container form label {
-    font-family: "Roboto", sans-serif; }
-  .form-container form:after {
-    content: '';
-    display: table;
-    clear: both; }
-  .form-container form button {
-    float: right;
-    font-family: "Roboto", sans-serif;
-    background-color: #f0f0f0;
-    border-radius: 4px;
-    margin-top: 10px;
-    padding: 7px 15px; }
-    .form-container form button:focus {
-      outline: 0; }
-    .form-container form button:hover {
-      transition: all 350ms ease-in-out;
-      background: #bdbdbd; }
+  flex-direction: column; }
+  .form-container form {
+    box-shadow: 0px 1px 10px 0px darkgrey;
+    padding: 10px;
+    border-radius: 10px; }
+    .form-container form input {
+      width: 100%;
+      font-family: "Roboto", sans-serif;
+      border: none;
+      border-bottom: 1px solid purple;
+      background: none;
+      margin-bottom: 2px; }
+      .form-container form input.formValid {
+        border-bottom: 1px solid purple;
+        background: none; }
+      .form-container form input:focus {
+        outline: 0; }
+      .form-container form input.formInvalid {
+        background: #ffcccc;
+        border-bottom: 1px solid red; }
+        .form-container form input.formInvalid::placeholder {
+          color: red; }
+    .form-container form label {
+      font-family: "Roboto", sans-serif; }
+    .form-container form:after {
+      content: '';
+      display: table;
+      clear: both; }
+    .form-container form button {
+      float: right;
+      font-family: "Roboto", sans-serif;
+      background-color: #f0f0f0;
+      border-radius: 4px;
+      margin-top: 10px;
+      padding: 7px 15px; }
+      .form-container form button:focus {
+        outline: 0; }
+      .form-container form button:hover {
+        transition: all 350ms ease-in-out;
+        background: #bdbdbd; }
 
 /*# sourceMappingURL=style.css.map */
