--- a/20170617EserPerCompito/style.scss
+++ b/20170617EserPerCompito/style.scss
@@ -24,10 +24,15 @@ $secondary-font: 'Roboto', sans-serif;
   transition: all $time ease-in-out;
 }
 
+
+
 html,body{
   width: 100%;
   height: 100%;
   background-color: $background-color;
+  display: flex;
+  justify-content: center;
+  //align-items: center; se vuoi centrarlo anche verticalmente
 }
 
 h1{
@@ -38,9 +43,15 @@ h1{
 .form-container{
 
   width: 40%;
-  margin: 0 auto;
+  //margin: 0 auto; il modo vecchio
+  flex-direction: column;
 
   form{
+
+    box-shadow:  0px 1px 10px 0px darkgrey;
+    padding: 10px;
+    border-radius: 10px;
+
 
     input{
       width: 100%;
@@ -50,9 +61,29 @@ h1{
       background: none;
       margin-bottom: 2px;
 
-      &placeholder{
-        font-color: blue;
+      &.formValid{
+        border-bottom: 1px solid $primary-color;
+        background: none;
       }
+
+      &:focus {
+        outline:0;
+      }
+
+      &.formInvalid{
+        background: lighten(red, 40%);
+        border-bottom: 1px solid red;
+        &::placeholder {
+           color: red;
+        }
+
+      }
+
+
+
+      // &::placeholder { /* Chrome/Opera/Safari */
+      //       color: pink;
+      // }
     }
 
     label{
