--- a/20170620/style.css
+++ b/20170620/style.css
@@ -4,9 +4,49 @@
 html, body {
   width: 100%;
   height: 100%;
-  background-color: #f0f0f0;
+  background-color: #f0f0f0; }
+
+body {
+  padding-top: 90px;
   display: flex;
+  flex-direction: row;
   justify-content: center; }
+  body header {
+    background: purple;
+    padding: 20px;
+    width: 100%;
+    height: 50px;
+    position: fixed;
+    top: 0;
+    left: 0;
+    right: 0;
+    z-index: 100;
+    display: flex;
+    flex-direction: row;
+    justify-content: space-between; }
+  body nav {
+    background: #eee;
+    height: 40px;
+    width: 100%;
+    padding-top: 9px;
+    padding-left: 20px;
+    position: fixed;
+    top: 50px;
+    z-index: 100;
+    display: flex;
+    flex-direction: column;
+    justify-content: center; }
+    body nav ul {
+      list-style: none;
+      margin: 0;
+      padding: 0;
+      display: flex;
+      flex-direction: row;
+      justify-content: center; }
+      body nav ul li {
+        margin-right: 10px; }
+        body nav ul li a {
+          text-decoration: none; }
 
 h1 {
   text-align: center;
