--- a/20170620/style.scss
+++ b/20170620/style.scss
@@ -30,10 +30,79 @@ html,body{
   width: 100%;
   height: 100%;
   background-color: $background-color;
-  display: flex;
-  justify-content: center;
+
   //align-items: center; se vuoi centrarlo anche verticalmente
 }
+
+body{
+  padding-top: 90px;
+  display: flex;
+	flex-direction: row;
+  justify-content: center;
+
+
+  header{
+    background: $primary-color;
+  	padding: 20px;
+  	width: 100%;
+  	height: 50px;
+  	position: fixed;
+  	top: 0;
+  	left: 0;
+  	right: 0;
+  	z-index: 100;
+    display: flex;
+  	flex-direction: row;
+    justify-content: space-between;
+
+
+    // .logo{
+    //   float: left;
+    // }
+    //
+    // .login{
+    //   float: right;
+    // }
+  }
+
+  nav {
+  	background: #eee;
+  	height: 40px;
+  	width: 100%;
+  	padding-top: 9px;
+  	padding-left: 20px;
+  	position: fixed;
+  	top: 50px;
+  	z-index: 100;
+    display: flex;
+  	flex-direction: column;
+    justify-content: center;
+
+
+
+      ul{
+        list-style: none;
+      	margin: 0;
+      	padding: 0;
+        display: flex;
+        flex-direction: row;
+        justify-content: center;
+
+          li{
+
+          	 margin-right: 10px;
+
+              a{
+              	text-decoration: none;
+              }
+          }
+
+
+      }
+  }
+}
+
+
 
 h1{
   text-align: center;
