--- a/20170711Antonino/css/style.css
+++ b/20170711Antonino/css/style.css
@@ -1,8 +1,89 @@
-h1,h2,h3,h4,h5,h6{
-  font-family: 'Merriweather', serif;
-
+*{
+  font-family: 'Open Sans', sans-serif;
 }
 
 p{
-  font-family: 'Montserrat', sans-serif;
+  font-family: 'Zilla Slab', serif;
+}
+
+html, body{
+  height: 100%;
+}
+
+.navbar {
+  position: fixed;
+  width: 100%;
+  background: #606060;
+
+}
+
+.navbar-default{
+  position: fixed;
+  width: 100%;
+}
+
+.navbar-default .navbar-nav>li>a {
+    color: white;
+}
+
+.navbar-default .navbar-brand {
+    color: black;
+}
+
+
+.container{
+  display: flex;
+  justify-content: center;
+  margin: 0 auto;
+  height: 100%;
+  padding-top: 70px;	/*aumento padding-top del body perchè ho messo fixed nav e header*/
+
+}
+
+section{
+  height: 100%;
+  width:  100%;
+}
+
+
+form{
+
+  box-shadow:  0px 1px 10px 0px darkgrey;
+  padding: 10px;
+  border-radius: 10px;
+  margin: 20px auto 0 auto;
+
+}
+
+footer{
+  color: white;
+  background: #606060;
+  height: 80px;
+  width: 100%;
+  margin: 0;
+  text-align:center;
+  position: fixed;
+  bottom: 0;
+}
+
+footer p{
+  color: white;
+  margin-bottom: 0;
+
+
+}
+/*Per la responsivness, metti i ittoli più grossi*/
+@media screen and (min-width: 770px)/* and (max-width: 1200px)*/{
+  *{
+			font-size: 18px /*Da qui in poi voglio che il sito sia a 18px*/
+	}
+
+  h1,h2{
+		/*font-size: 1em; Corrisponde a 18px*/
+		font-size: 1.3em
+	}
+
+  form{
+    width: 600px;
+  }
 }
